New idiom and modifications
Added ranged dot plot map, word cloud. Modified map to be able to zoom in on specific areas.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             </div>
         </div>
         <div id="word_cloud"></div>
+        <div id="ranged_dot_plot"></div>
     </div>
 </body>
 </html>
