Add small multiples

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         </div>
         <div id="word_cloud"></div>
         <div id="ranged_dot_plot"></div>
+        <div id="area_chart"></div>
     </div>
 </body>
 </html>
