--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.4.0"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.21.0"></script>
 
-    <script src="js/week10.js"></script>
+    <script src="js/idioms.js"></script>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css" integrity="sha384-X38yfunGUhNzHpBaEBsWLO+A0HDYOQi8ufWDkZ0k9e0eXz/tH3II7uKZ9msv++Ls" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/grids-responsive-min.css" />
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Metrophobic&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 
     <title>Metro Systems Around The World</title>
 </head>
@@ -27,35 +28,35 @@
                 <div id="map-dropdown"></div>
             </div>
         </div>
-        <h2>Development of Metro Systems</h2>
+        <h2 id="top-h2">Development of Metro Systems</h2>
         <div class="pure-g">
             <div class="pure-u-1-2">
                 <div id="area_chart"></div>
-                <p>The majority of metro systems are found in Asia, Europe and North America. The number of metro systems has gone up steadily from around the 1970s, where different continents contribute to the increase of metro systems in different years.</p>
+                <p class="left-p">The majority of metro systems are found in <span class="asia">Asia</span>, <span class="europe">Europe</span> and <span class="north-america">North America</span>. The number of metro systems has gone up steadily from around the 1970s, where different continents contribute to the increase of metro systems in different ranges of years.</p>
             </div>
             <div class="pure-u-1-2">
                 <div id="ranged_dot_plot"></div>
-                <p>North America and Europe have had metro systems built in the earlier years, followed by South America. The development of metro systems in Asia and Africa are more recent. Many metro systems do get expanded in more recent years.</p>
+                <p class="right-p"><span class="north-america">North America</span> and <span class="europe">Europe</span> have had metro systems built in the earlier years, followed by <span class="south-america">South America</span>. The development of metro systems in <span class="asia">Asia</span> and <span class="africa">Africa</span> are more recent. Many metro systems do get expanded in more recent years.</p>
             </div>
         </div>
-        <h2>Metro Systems Today</h2>
+        <h2 id="bottom-h2">Metro Systems Today</h2>
         <div class="pure-g">
             <div class="pure-u-1-2">
                 <div id="bubble_plot"></div>
                 <div id="bubble-plot-dropdown"></div>
-                <p>There is a clear trend of longer metro systems having a larger number of stations. With an increasing metro system length and number of stations, the annual ridership of the metro system generally increases, with very few exceptions. Malaysia has a low annual ridership for its system length and number of stations.</p>
+                <p class="left-p">There is a clear trend of longer metro systems having a larger number of stations. With an increasing metro system length and number of stations, the annual ridership of the metro system generally increases, with very few exceptions. Malaysia has a low annual ridership for its system length and number of stations.</p>
             </div>
             <div class="pure-u-1-2">
                 <div id="word_cloud"></div>
-                <p>There are many countries with a single metro system. Countries which have many metro systems are generally larger in area and population. Malaysia only has 1 metro system, which is the RapidKL.</p>
+                <p class="right-p">There are many countries with a single metro system. Countries which have many metro systems are generally larger in area and population. Malaysia only has 1 metro system, which is the RapidKL.</p>
             </div>
         </div>
         <pre>
         
         Visualisation by Ewan Chung
-        Last modified on 10/10/2024
+        Last modified on 13/10/2024
         Data from <a href="https://www.kaggle.com/datasets/drahulsingh/metro-systems-worldwide">Kaggle</a> by drahulsingh, last updated a year ago
-        Data is collected through data scraping
+        Data is collected through data scraping from various websites
         </pre>
     </div>
 </body>
