Final changes for assignment 2

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 </head>
 <body>
     <div class="page">
-        <h1>Metro Systems Around The World</h1>
+        <h1>🚇 Metro Systems Around The World 🌏</h1>
         <div class="pure-g">
             <div class="pure-u-1-1">
-                <p id="center-text">There are many metro systems around the world. This visualisation explores the development of metro systems around the world over time, as well as the distribution of metro systems today. The map shows where each metro system is located.</p>
+                <p id="center-text">There are many metro systems around the world. This visualisation explores the development of metro systems over time, as well as their current distribution. The map shows the location of each metro system. Adjust the map area to zoom in on specific regions.</p>
                 <div id="map"></div>
                 <div id="map-dropdown"></div>
             </div>
@@ -32,11 +32,11 @@
         <div class="pure-g">
             <div class="pure-u-1-2">
                 <div id="area_chart"></div>
-                <p class="left-p">The majority of metro systems are found in <span class="asia">Asia</span>, <span class="europe">Europe</span> and <span class="north-america">North America</span>. The number of metro systems has gone up steadily from around the 1970s, where different continents contribute to the increase of metro systems in different ranges of years.</p>
+                <p class="left-p">The majority of metro systems are found in <span class="asia">Asia</span>, <span class="europe">Europe</span> and <span class="north-america">North America</span>. The number of metro systems has steadily increased since the 1970s, with different continents contributing to this growth at various times.</p>
             </div>
             <div class="pure-u-1-2">
                 <div id="ranged_dot_plot"></div>
-                <p class="right-p"><span class="north-america">North America</span> and <span class="europe">Europe</span> have had metro systems built in the earlier years, followed by <span class="south-america">South America</span>. The development of metro systems in <span class="asia">Asia</span> and <span class="africa">Africa</span> are more recent. Many metro systems do get expanded in more recent years.</p>
+                <p class="right-p"><span class="north-america">North America</span> and <span class="europe">Europe</span> saw the early development of metro systems, followed by <span class="south-america">South America</span>. The development of metro systems in <span class="asia">Asia</span> and <span class="africa">Africa</span> is more recent. Many metro systems have also been expanded in recent years.</p>
             </div>
         </div>
         <h2 id="bottom-h2">Metro Systems Today</h2>
@@ -44,19 +44,20 @@
             <div class="pure-u-1-2">
                 <div id="bubble_plot"></div>
                 <div id="bubble-plot-dropdown"></div>
-                <p class="left-p">There is a clear trend of longer metro systems having a larger number of stations. With an increasing metro system length and number of stations, the annual ridership of the metro system generally increases, with very few exceptions. Malaysia has a low annual ridership for its system length and number of stations.</p>
+                <p class="left-p">There is a clear trend of longer metro systems having a larger number of stations. As the length and number of stations in a metro system increase, the annual ridership generally rises, with few exceptions. Malaysia, however, has a low annual ridership relative to its system length and number of stations. Details of a specific continent or country can be seen using the legend and dropdown menu respectively.</p>
             </div>
             <div class="pure-u-1-2">
                 <div id="word_cloud"></div>
-                <p class="right-p">There are many countries with a single metro system. Countries which have many metro systems are generally larger in area and population. Malaysia only has 1 metro system, which is the RapidKL.</p>
+                <p class="right-p">There are many countries with a single metro system. Countries with multiple metro systems are generally larger in area and population. Malaysia has only one metro system, which is RapidKL.</p>
             </div>
         </div>
         <pre>
         
-        Visualisation by Ewan Chung
-        Last modified on 13/10/2024
-        Data from <a href="https://www.kaggle.com/datasets/drahulsingh/metro-systems-worldwide">Kaggle</a> by drahulsingh, last updated a year ago
-        Data is collected through data scraping from various websites
+        Visualisation by Ewan Chung.
+        Last modified on 13/10/2024.
+        Data from <a href="https://www.kaggle.com/datasets/drahulsingh/metro-systems-worldwide">Kaggle</a> by drahulsingh, last updated in 2023.
+        Data is collected through data scraping from various websites.
+        Some metro systems have no information of their annual ridership.
         </pre>
     </div>
 </body>
