--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         
         Visualisation by Ewan Chung.
         Last modified on 13/10/2024.
-        Data from <a href="https://www.kaggle.com/datasets/drahulsingh/metro-systems-worldwide">Kaggle</a> by drahulsingh, last updated in 2023.
+        Data from <a href="https://www.kaggle.com/datasets/drahulsingh/metro-systems-worldwide">Kaggle</a> by drahulsingh, last updated on 12/06/2023.
         Data is collected through data scraping from various websites.
         Some metro systems have no information of their annual ridership.
         </pre>
