Slight modification for map and html
Metro system for Malaysia is red, added a line for Malaysia in html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
             <div class="pure-u-1-2">
                 <div id="ranged_dot_plot"></div>
-                <p class="right-p"><span class="north-america">North America</span> and <span class="europe">Europe</span> saw the early development of metro systems, followed by <span class="south-america">South America</span>. The development of metro systems in <span class="asia">Asia</span> and <span class="africa">Africa</span> is more recent. Many metro systems have also been expanded in recent years.</p>
+                <p class="right-p"><span class="north-america">North America</span> and <span class="europe">Europe</span> saw the early development of metro systems, followed by <span class="south-america">South America</span>. The development of metro systems in <span class="asia">Asia</span> and <span class="africa">Africa</span> is more recent. Malaysia opened their metro system in 1996 and last expanded in 2023.</p>
             </div>
         </div>
         <h2 id="bottom-h2">Metro Systems Today</h2>
